# TriviaServer

./: .gitignore  README.md
trivia_backend/: CMakeLists.txt  vcpkg.json
trivia_backend/src/: constants.h  log.cpp  log.h  main.cpp  server.cpp  server.h
trivia_backend/src/errors/: error.h  result.h
trivia_backend/src/managers/: game.cpp  game.h  gameManager.cpp  gameManager.h  loggedUser.h  loginManager.cpp  loginManager.h  question.cpp  question.h  room.cpp  room.h  roomData.h  roomManager.cpp  roomManager.h  statisticsManager.cpp  statisticsManager.h  userStatistics.h  usersManager.cpp  usersManager.h
trivia_backend/src/requestHandlers/: IRequestHandler.h  gameRequestHandler.cpp  gameRequestHandler.h  loginRequestHandler.cpp  loginRequestHandler.h  menuRequestHandler.cpp  menuRequestHandler.h  requestHandlerFactory.cpp  requestHandlerFactory.h  roomAdminRequestHandler.cpp  roomAdminRequestHandler.h  roomMemberRequestHandler.cpp  roomMemberRequestHandler.h  verificationHandler.cpp  verificationHandler.h
trivia_backend/src/utils/communicator/: communicator.cpp  communicator.h  endpoint.h
trivia_backend/src/utils/configLoader/: configLoader.cpp  configLoader.h
trivia_backend/src/utils/conversionHelper/: conversionHelper.cpp  conversionHelper.h
trivia_backend/src/utils/databaseAccess/: IDatabasae.h  QuestionDb.h  User.h  sqliteDatabase.cpp  sqliteDatabase.h
trivia_backend/src/utils/email_sender/: emailSender.cpp  emailSender.h
trivia_backend/src/utils/marshaling/: jsonDeserializer.cpp  jsonDeserializer.h  jsonSerializer.cpp  jsonSerializer.h
(+8 files in other folders)
